# LighthouseKeeper

./: .gitmodules  LICENSE.MIT
DesktopClient/: AppIconsUbuntu.md  CMakeLists.txt
DesktopClient/TemplateFiles/config/: settings.json
DesktopClient/include/: ProcessCrawler.h  Settings.h  SocketCommunication.h  ThreadMonitor.h  WindowManager.h
DesktopClient/src/: ProcessCrawler.cpp  Settings.cpp  SocketCommunication.cpp  ThreadMonitor.cpp  WindowManager.cpp  main.cpp
ESP8266/: ESP8266.ino  RemoteSocket.ino
